# Nx-Usb

./: Cargo.toml  Dockerfile  README.md  Xargo.toml  aarch64-horizon-nro.json  aarch64-none-elf.json  build.sh  makew
.cargo/: config
client/: Cargo.toml
client/src/: commands.rs  interface.rs  main.rs
client/src/libusb_impl/: fileio.rs  mod.rs  usbcom.rs
client/src/test_impl/: mod.rs
server/: Cargo.toml
server/src/: commands.rs  interface.rs  main.rs
server/src/libnx_impl/: fileio.rs  mod.rs  usb_comms.rs
server/src/test_impl/: mod.rs
src/: lib.rs  main.rs  prefixes.rs
src/server/: commands.rs  interface.rs  mod.rs  prefixes.rs
src/server/libnx_impl/: fileio.rs  mod.rs  usb_comms.rs
src/server/test_impl/: mod.rs
